--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!doctype html>
+<html lang="es-ES">
 
+<head>
+    <title>Los Xavales del Chino.</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="img/icono.png" type="icono/png" rel="icon">
+</head>
+
+<body>
+    <h1>Los Xavales del Chino.</h1>
+    <p></p>
+</body>
