--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Los Xavales del Chino.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link href="img/icono.png" type="icono/png" rel="icon">
+    <link href="img/icono.jpg" type="icono/png" rel="icon">
 </head>
 
 <body>
