--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 
 <body>
     <h1>Los Xavales del Chino.</h1>
-    <p></p>
+    <h2>
+        <ul>
+            <li><a href="./noticias.html">Noticias.</a></li>
+            <li><a href="./merchan.html">Merchandising.</a></li>
+            <li><a href="./releases.html">Ultimos releases.</a></li>
+            <li><a href="./premios.html">Vota para los awards.</a></li>
+        </ul>
+    </h2>
 </body>
