--- a/releases.html
+++ b/releases.html
@@ -1,1 +1,13 @@
+<!doctype html>
+<html lang="es-ES">
 
+<head>
+    <title>Los Xavales del Chino.</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="img/icono.jpg" type="icono/png" rel="icon">
+</head>
+
+<body>
+
+</body>
