Mucho trabajo mucho borracho

--- a/index.html
+++ b/index.html
@@ -10,14 +10,69 @@
 
 <body>
     <h1>Los Xavales del Chino.</h1>
+    <h3>
+        <p>Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
+            gusto, pero eso ya lo sabéis si nos seguís en YouTube. Ahora os dejamos por aqui nuestras redes sociales y
+            os hablaremos de los ultimos temas que estan to´pegaos y un par de cositas mas. </p> <a
+            href="https://www.instagram.com/losxavales00/"><img class="icono1"
+                src="img/ig.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono1"
+                src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
+                class="icono1" src="img/twitter.png"></a>
+    </h3>
+
     <h2>
         <ul>
+            <br>
             <li><a href="./noticias.html">Noticias.</a></li>
+            <br>
             <li><a href="./merchan.html">Merchandising.</a></li>
+            <br>
             <li><a href="./releases.html">Ultimos releases.</a></li>
+            <br>
             <li><a href="./premios.html">Vota para los awards.</a></li>
+            <br>
         </ul>
     </h2>
+    
+    <div id="pie">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>
+            <MARQUEE>
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+            </MARQUEE>
+        </p>
+    </div>
 </body>
 
 </html>
