VAMOS PAL MAMBO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.</h1>
+    <h1>Los Xavales del Chino. <img class="icono2" src="./img/icono2.png"><a class="links" href="./index.html"></a></h1>
     <h3>
         <p>Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
             gusto, pero eso ya lo sabéis si nos seguís en YouTube. Ahora os dejamos por aqui nuestras redes sociales y
@@ -18,7 +18,8 @@
                 src="img/ig.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
             href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono1"
                 src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
-                class="icono1" src="img/twitter.png"></a>
+                class="icono1" src="img/twitter.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+            href="https://www.twitch.tv/losxavales00"><img class="icono1" src="img/twitch.png"></a>
     </h3>
 
     <h2>
@@ -34,32 +35,9 @@
             <br>
         </ul>
     </h2>
-    
+    <p class="class2"><img class="class1" src="img/fotodura6.jpg"><img class="class1" src="img/fotodura5.jpg"><img class="class1"
+            src="img/fotodura4.jpg"><img class="class1" src="img/fotodura3.jpg"></p>
     <div id="pie">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <br>
         <br>
         <br>
