--- a/merchan.html
+++ b/merchan.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <h1>Los Xavales del Chino.</h1>
+    <p>Algunos artistas aparte de estar en la industria de la música, tambien se han introducido en el mundo de la moda
+        con sus propias marcas que les representan. No solo artistas conocidos mundialmente, tambien artistas mas
+        urbanos e independientas.</p>
+        <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y Waor,FernandoCosta y David Bisbal</p>
 </body>
- 
+
 </html>
