muchos cambios en el merch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino. <img class="icono2" src="./img/icono2.png"><a class="links" href="./index.html"></a></h1>
+    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
     <h3>
         <p>Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
             gusto, pero eso ya lo sabéis si nos seguís en YouTube. Ahora os dejamos por aqui nuestras redes sociales y
@@ -35,8 +35,8 @@
             <br>
         </ul>
     </h2>
-    <p class="class2"><img class="class1" src="img/fotodura6.jpg"><img class="class1" src="img/fotodura5.jpg"><img class="class1"
-            src="img/fotodura4.jpg"><img class="class1" src="img/fotodura3.jpg"></p>
+    <p class="class2"><img class="class1" src="img/fotodura6.jpg"><img class="class1" src="img/fotodura5.jpg"><img
+            class="class1" src="img/fotodura4.jpg"><img class="class1" src="img/fotodura3.jpg"></p>
     <div id="pie">
         <br>
         <br>
