--- a/noticias.html
+++ b/noticias.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.</h1>
+    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
 </body>
 
 </html>
