--- a/merchan.html
+++ b/merchan.html
@@ -9,11 +9,31 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.</h1>
+    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
     <p>Algunos artistas aparte de estar en la industria de la música, tambien se han introducido en el mundo de la moda
         con sus propias marcas que les representan. No solo artistas conocidos mundialmente, tambien artistas mas
         urbanos e independientas.</p>
-        <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y Waor,FernandoCosta y David Bisbal</p>
+    <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y
+        Waor,FernandoCosta y David Bisbal</p>
+        <table class="class3">
+            <tr>
+                <th><img class="class4" src="img/rosaliamerch.png"></th>
+                <th><img class="class4" src="img/ctanganamerch.jpg"></th>
+            </tr>
+            <tr>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <th><img class="class4" src="img/cruzzimerch.webp"></th>
+                <th><img class="class4" src="img/dellafuentemerch.webp"></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+
+        </table>
 </body>
 
 </html>
