Pagina de merch

--- a/merchan.html
+++ b/merchan.html
@@ -15,25 +15,39 @@
         urbanos e independientas.</p>
     <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y
         Waor,FernandoCosta y David Bisbal</p>
-        <table class="class3">
-            <tr>
-                <th><img class="class4" src="img/rosaliamerch.png"></th>
-                <th><img class="class4" src="img/ctanganamerch.jpg"></th>
-            </tr>
-            <tr>
-                <td> </td>
-                <td> </td>
-            </tr>
-            <tr>
-                <th><img class="class4" src="img/cruzzimerch.webp"></th>
-                <th><img class="class4" src="img/dellafuentemerch.webp"></th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-            </tr>
+    <table class="class3">
+        <tr>
+            <th><a href="https://rosalia.tmstor.es/"><img class="class5" src="img/rosaliamerch.png"></a></th>
+            <th><a href="https://ctangana.com/"><img class="class4" src="img/puchomerch.jpg"></a></th>
+        </tr>
+        <tr>
+            <td class="class6">Merch de Rosalia.</td>
+            <td class="class6">Merch de C.Tangana.</td>
+        </tr>
+        <tr>
+            <th><a href="https://cruzcafune.es/"><img class="class4" src="img/cruzzimerch.jpg"></a></th>
+            <th><a href="https://dellafuentefc.com/"><img class="class4" src="img/dellafuentemerch.jpg"></a></th>
+        </tr>
+        <tr>
+            <td class="class6">Merch de Cruz Cafuné</td>
+            <td class="class6">Merch de Dellafuente.</td>
+        </tr>
 
-        </table>
+    </table>
+    <div id="pie">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>
+            <MARQUEE>
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+            </MARQUEE>
+        </p>
+    </div>
 </body>
 
 </html>
