--- a/releases.html
+++ b/releases.html
@@ -10,6 +10,20 @@
 
 <body>
     <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
+    <div id="pie">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>
+            <MARQUEE>
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+                ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino ®LosXavalesDelChino
+            </MARQUEE>
+        </p>
+    </div>
 </body>
 
 
