--- a/merchan.html
+++ b/merchan.html
@@ -14,7 +14,8 @@
         con sus propias marcas que les representan. No solo artistas conocidos mundialmente, tambien artistas mas
         urbanos e independientas.</p>
     <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y
-        Waor,FernandoCosta y David Bisbal</p>
+        Waor,FernandoCosta y David Bisbal.</p>
+        <p>Aqui teneis algunos de los merchs mas reconocidos por los fans:</p>
     <table class="class3">
         <tr>
             <th><a href="https://rosalia.tmstor.es/"><img class="class5" src="img/rosaliamerch.png"></a></th>
@@ -34,6 +35,7 @@
         </tr>
 
     </table>
+    <p>Si quieres consultar el merch de cualquier otro artista, con buscar su nombre seguido de merch, te saldra su pagina oficial.</p>
     <div id="pie">
         <br>
         <br>
