--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>
         <p>Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
             gusto, pero eso ya lo sabéis si nos seguís en YouTube. Ahora os dejamos por aqui nuestras redes sociales y
-            os hablaremos de los ultimos temas que estan to´pegaos y un par de cositas mas. </p> <a
+            os hablaremos de los ultimos temas que estan to' pegaos y un par de cositas mas. </p> <a
             href="https://www.instagram.com/losxavales00/"><img class="icono1"
                 src="img/ig.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
             href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono1"
@@ -25,8 +25,6 @@
     <h2>
         <ul>
             <br>
-            <li><a href="./noticias.html">Noticias.</a></li>
-            <br>
             <li><a href="./merchan.html">Merchandising.</a></li>
             <br>
             <li><a href="./releases.html">Ultimos releases.</a></li>
@@ -35,7 +33,7 @@
             <br>
         </ul>
     </h2>
-    <p class="class2"><img class="class1" src="img/fotodura6.jpg"><img class="class1" src="img/fotodura5.jpg"><img
+    <p><img class="class1" src="img/fotodura6.jpg"><img class="class1" src="img/fotodura5.jpg"><br><img
             class="class1" src="img/fotodura4.jpg"><img class="class1" src="img/fotodura3.jpg"></p>
     <div id="pie">
         <br>
