--- a/merchan.html
+++ b/merchan.html
@@ -9,13 +9,20 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
+    <h1>Los Xavales del Chino.</h1>
+    <h1><a href="https://www.instagram.com/losxavales00/"><img class="icono3" src="img/ig.png"></a><a
+            href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono3"
+                src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><img class="icono2"
+                src="./img/icono.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
+                class="icono3" src="img/twitter.png"></a> <a href="https://www.twitch.tv/losxavales00"><img
+                class="icono3" src="img/twitch.png"></a></h1>
+    <h3>Merchandising.</h3>
     <p>Algunos artistas aparte de estar en la industria de la música, tambien se han introducido en el mundo de la moda
         con sus propias marcas que les representan. No solo artistas conocidos mundialmente, tambien artistas mas
         urbanos e independientas.</p>
     <p>Algunos de estos artistas son: C. Tangana , Rosalia, Dellafuente, Cruz Cafuné, Delaossa, Recycled j, Natos y
         Waor,FernandoCosta y David Bisbal.</p>
-        <p>Aqui teneis algunos de los merchs mas reconocidos por los fans:</p>
+    <p>Aqui teneis algunos de los merchs mas reconocidos por los fans:</p>
     <table class="class3">
         <tr>
             <th><a href="https://rosalia.tmstor.es/"><img class="class5" src="img/rosaliamerch.png"></a></th>
@@ -35,7 +42,12 @@
         </tr>
 
     </table>
-    <p>Si quieres consultar el merch de cualquier otro artista, con buscar su nombre seguido de merch, te saldra su pagina oficial.</p>
+    <br>
+    <br>
+    <br>
+    <p class="class6"><strong>Si quieres consultar el merch de cualquier otro artista, con buscar su nombre seguido de merch, te saldra
+            su
+            pagina oficial.</strong></p>
     <div id="pie">
         <br>
         <br>
