--- a/releases.html
+++ b/releases.html
@@ -9,7 +9,72 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
+    <h1>Los Xavales del Chino.</h1>
+    <h1><a href="https://www.instagram.com/losxavales00/"><img class="icono3" src="img/ig.png"></a><a
+            href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono3"
+                src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><img class="icono2"
+                src="./img/icono.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
+                class="icono3" src="img/twitter.png"></a> <a href="https://www.twitch.tv/losxavales00"><img
+                class="icono3" src="img/twitch.png"></a></h1>
+    <h3>Ultimos releases.</h3>
+    <p> Mantente informado de los ultimos temas y albums de los artistas mas "pegaos" del panorama. Ademas puedes ir
+        directamente a escuharlo en Spotify con un solo clic.</p>
+    <p>Iremos actualizando la pagina semanalmente con los releases mas importantes de esa semana.</p>
+    <br>
+    <br>
+    <table class="class8">
+        <tr>
+            <th>
+                OLDPURP FT YUNG BEEF - EN VERDA
+            </th>
+            <th>
+                Rels B - yo pr1mero
+            </th>
+            <th>El Hombre Hace Planes, Dios Se Ríe -
+                Dano (Album)
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://open.spotify.com/track/74LP5t5rTN48FNkJb6J5vJ?si=8fc78397b89c45a1"><img class="class7"
+                        src="img/enverdad.jpg"></a>
+            </td>
+            <td>
+                <a href="https://open.spotify.com/track/0O0kmHHBUG4YCqrKvMnmQy?si=736d7f1cae484946"><img class="class7"
+                        src="img/yoprimero.png"></a>
+            </td>
+            <td>
+                <a href="https://open.spotify.com/album/0xEGQSfKAhZj1yAFj4JMYP?si=9wHL_6KeQRmaMAd7BzFg9Q"><img
+                        class="class7" src="img/dano.jpg"></a>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                Recycled J, Selecta - 150 CANCIONES
+            </th>
+            <th>
+                Raul Clyde - 3D
+            </th>
+            <th>
+                SPEED IT UP - BabyMurda (feat. Baby Pantera)
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://open.spotify.com/track/7B8Oux2lcjPTfInXAbabbx?si=e08ed8998ade4fd8"><img class="class7"
+                        src="img/150canciones.jfif"></a>
+            </td>
+            <td>
+                <a href="https://open.spotify.com/track/5JJ6L13wMxsVbU48EkCe8l?si=45239db82c434825"><img class="class7"
+                        src="img/tresde.jpg"></a>
+            </td>
+            <td>
+                <a href="https://open.spotify.com/track/2TMBLK6mtntFxGINaJKnVg?si=cd29323c3fe54dcc"><img class="class7"
+                        src="img/speeditup.jpg"></a>
+            </td>
+        </tr>
+
+    </table>
     <div id="pie">
         <br>
         <br>
