--- a/premios.html
+++ b/premios.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
+    <h1>Los Xavales del Chino.</h1>
+    <h1><a href="https://www.instagram.com/losxavales00/"><img class="icono3"
+        src="img/ig.png"></a><a
+    href="https://www.youtube.com/channel/UCVTXCAJ_1-cPhTYliqJaVYQ"><img class="icono3"
+        src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index.html"><img class="icono2"
+        src="./img/icono.jpg"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
+        class="icono3" src="img/twitter.png"></a> <a
+    href="https://www.twitch.tv/losxavales00"><img class="icono3" src="img/twitch.png"></a></h1>
+    <h3>Vota para LosXavales Awards.</h3>
     <div id="pie">
         <br>
         <br>
