Final pagina principal y 2 secundaria.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>Los Xavales del Chino.<br><a href="./index.html"><img class="icono2" src="./img/icono.jpg"></a></h1>
-    <h3>
-        <p>Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
+            <p class="class2">Los Xavales hablamos de música, principalmente de la escena urbana española, siempre desde el respeto y buen
             gusto, pero eso ya lo sabéis si nos seguís en YouTube. Ahora os dejamos por aqui nuestras redes sociales y
             os hablaremos de los ultimos temas que estan to' pegaos y un par de cositas mas. </p> <a
             href="https://www.instagram.com/losxavales00/"><img class="icono1"
@@ -20,7 +19,6 @@
                 src="img/youtube.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/losxavales00"><img
                 class="icono1" src="img/twitter.png"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
             href="https://www.twitch.tv/losxavales00"><img class="icono1" src="img/twitch.png"></a>
-    </h3>
 
     <h2>
         <ul>
