--- a/premios.html
+++ b/premios.html
@@ -18,6 +18,11 @@
         class="icono3" src="img/twitter.png"></a> <a
     href="https://www.twitch.tv/losxavales00"><img class="icono3" src="img/twitch.png"></a></h1>
     <h3>Vota para LosXavales Awards.</h3>
+    <form>
+        <fieldset>
+            
+        </fieldset>
+    </form>
     <div id="pie">
         <br>
         <br>
